# clear-extract

./: .gitignore  LICENSE  README.md  clear_extract_spec.md  pyproject.toml  value_proposition_spec.md
clear_extract/: __init__.py  enums.py  evidence.py  field.py  guidance.py  policy.py  record.py  result.py  schema.py
